Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bool = \"art.vandelay@vandelay.co\".endswith(\".com\") \n",
+    " \"art.vandelay@vandelay.co\".endswith(\".com\") \n",
     "        # False"
    ]
   },
