--- a/index.ipynb
+++ b/index.ipynb
@@ -205,12 +205,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    " \"art.vandelay@vandelay.co\".endswith(\".com\") \n",
-    "        # False"
+    "\"art.vandelay@vandelay.co\".endswith(\".com\") # False"
    ]
   },
   {
