--- a/index.ipynb
+++ b/index.ipynb
@@ -164,8 +164,7 @@
     }
    ],
    "source": [
-    "title = \"art vandelay\" # 'Art Vandelay'\n",
-    "\"art vandelay\".title ()"
+    "\"art vandelay\" # 'Art Vandelay'\n"
    ]
   },
   {
