Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,8 +191,7 @@
     }
    ],
    "source": [
-    "upper = \"Ceo\" # 'CEO'\n",
-    "\"ceo\".upper ()"
+    "\"Ceo\".upper() # 'CEO'\n"
    ]
   },
   {
